--- a/components/timer.html
+++ b/components/timer.html
@@ -641,7 +641,7 @@
                                 
                                 <h1 id="timer">Timer</h1>
 <p>The Timer component provides a timer that will trigger a predefined callback when the time is up. An example use case is for the timing of quizzes.</p>
-<p>Example:</p>
+<h4 id="example">Example:</h4>
 <pre><code class="lang-html"><span class="hljs-tag">&lt;<span class="hljs-name">Timer</span> 
   <span class="hljs-attr">id</span>=<span class="hljs-string">&apos;test-quiz&apos;</span>
   <span class="hljs-attr">active</span>=<span class="hljs-string">{true}</span> 
@@ -651,7 +651,7 @@
   }}
 /&gt;</span>
 </code></pre>
-<h2 id="options">Options</h2>
+<h4 id="options">Options</h4>
 <ul>
 <li><strong>id</strong>:  the unique <code>string</code> ID for the timer. The timer component is persistent over page refreshes. Required.</li>
 <li><strong>active</strong>: <code>boolean</code> flag that can be toggled to start or pause the timer. Default: <code>false</code>.</li>
@@ -701,7 +701,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Timer","level":"1.4.18","depth":2,"next":{"title":"LaTeX Equations","level":"1.4.19","depth":2,"path":"components/latex.md","ref":"components/latex.md","articles":[]},"previous":{"title":"Switch","level":"1.4.17","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/timer.md","mtime":"2016-11-11T08:23:45.172Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-17T06:40:44.940Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Timer","level":"1.4.18","depth":2,"next":{"title":"LaTeX Equations","level":"1.4.19","depth":2,"path":"components/latex.md","ref":"components/latex.md","articles":[]},"previous":{"title":"Switch","level":"1.4.17","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/timer.md","mtime":"2016-11-17T06:47:19.908Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-17T06:47:36.112Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
