--- a/components/slider-input.html
+++ b/components/slider-input.html
@@ -640,6 +640,25 @@
                                 <section class="normal markdown-section">
                                 
                                 <h1 id="slider-input">Slider Input</h1>
+<p>A slider input component. Usually, this will be used as part of an <a href="dashboard.html">ISLE dashboard</a>, but it can also be used standalone. In this case, you want to handle changes via the <code>onChange</code> attribute. </p>
+<h4 id="example">Example:</h4>
+<pre><code class="lang-html"><span class="hljs-tag">&lt;<span class="hljs-name">SliderInput</span>
+    <span class="hljs-attr">legend</span>=<span class="hljs-string">&quot;Success Probability&quot;</span>
+    <span class="hljs-attr">defaultValue</span>=<span class="hljs-string">{0.5}</span>
+    <span class="hljs-attr">min</span>=<span class="hljs-string">{0}</span>
+    <span class="hljs-attr">max</span>=<span class="hljs-string">{1}</span>
+    <span class="hljs-attr">step</span>=<span class="hljs-string">{0.01}</span>
+/&gt;</span>
+</code></pre>
+<h4 id="options">Options:</h4>
+<ul>
+<li><strong>defaultValue</strong>: The value the slider is initialized with. Default: <code>10</code>.</li>
+<li><strong>fractionDigits</strong>: The number of digits after the decimal points displayed for the current value. Default: <code>null</code>.</li>
+<li><strong>max</strong>: The maximum value of the slider. Default: <code>100</code>.</li>
+<li><strong>min</strong>: The minimum value of the slider. Default: <code>0</code>.</li>
+<li><strong>step</strong>: The step size of the slider. Default: <code>1</code>.</li>
+<li><strong>onChange</strong>: Callback <code>function</code> invoked after each change of the slider value. Default: <code>null</code>.</li>
+</ul>
 
                                 
                                 </section>
@@ -683,7 +702,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Slider Input","level":"1.4.2.4","depth":3,"next":{"title":"Text Area","level":"1.4.2.5","depth":3,"path":"components/text-area.md","ref":"components/text-area.md","articles":[]},"previous":{"title":"Select Input","level":"1.4.2.3","depth":3,"path":"components/select-input.md","ref":"components/select-input.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/slider-input.md","mtime":"2016-09-27T14:11:18.883Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-17T06:47:36.112Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Slider Input","level":"1.4.2.4","depth":3,"next":{"title":"Text Area","level":"1.4.2.5","depth":3,"path":"components/text-area.md","ref":"components/text-area.md","articles":[]},"previous":{"title":"Select Input","level":"1.4.2.3","depth":3,"path":"components/select-input.md","ref":"components/select-input.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/slider-input.md","mtime":"2016-11-17T20:26:18.000Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-17T20:28:08.449Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
